# sample-lib

./: README.md  pyproject.toml
src/samplelib/: __init__.py  __version__.py  _version.py
test/: test_main.py
