[tool.poetry]
name = "samplelib"
version = "0.0.0" # automatically injectred by poetry-dynamic-versioning
description = "Sample package that are installed"
authors = ["Shin Saito <shinsa@jp.ibm.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "~=3.9.5"
pandas = "^1.2.4"
pytest = "^6.2.4"

[tool.poetry.dev-dependencies]
autopep8 = "^1.5.7"

[tool.poetry.scripts]

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "pep440"

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry.core.masonry.api"
